# market_feed

./: .gitignore  LICENSE.md  market_config.json  multi_config.json  pyproject.toml  readme.md  requirements.txt  test_bloomberg.ipynb  test_feed.ipynb  test_stability.ipynb
.github/workflows/: bump_version.yml
src/market_feed/: __init__.py  base.py  manager.py
src/market_feed/adapters/: bloomberg.py  deribit.py  feed_instruments.csv
